force-app/main/default/objects/Card__c/fields/Available_Limit__c.field-meta.xml
<CustomField>
    <fullName>Available_Limit__c</fullName>
    <label>Available Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>