force-app/main/default/objects/Card__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>RS_Bank_Account__c</referenceTo>
    <relationshipName>Card_Management</relationshipName>
    <type>Lookup</type>
</CustomField>