force-app/main/default/objects/Card__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>