force-app/main/default/objects/Card__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <inlineHelpText>Credit limit for credit cards only</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>