force-app/main/default/objects/Card__c/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <inlineHelpText>4 digit security code</inlineHelpText>
    <label>CVV</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>