force-app/main/default/objects/Card__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <defaultValue>50000</defaultValue>
    <label>Daily Transaction Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>