force-app/main/default/objects/Card__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <inlineHelpText>Card expiration date (MM/YY format will be handled in UI)</inlineHelpText>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>