force-app/main/default/objects/Card__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>Expiry_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checks if card is expired</inlineHelpText>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>