force-app/main/default/objects/Card__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>