force-app/main/default/objects/Card__c/fields/Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Date__c</fullName>
    <inlineHelpText>Last transaction date and time</inlineHelpText>
    <label>Last Used Date</label>
    <type>DateTime</type>
</CustomField>