force-app/main/default/objects/Card__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <inlineHelpText>4-digit PIN for debit cards (encrypted)</inlineHelpText>
    <label>PIN</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>