force-app/main/default/objects/Card__c/fields/RS_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>RS_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RS Bank Account</label>
    <referenceTo>RS_Bank_Account__c</referenceTo>
    <relationshipLabel>Card (RS Bank Account)</relationshipLabel>
    <relationshipName>Card</relationshipName>
    <type>Lookup</type>
</CustomField>