force-app/main/default/objects/Card__c/validationRules/Credit_Card_Must_Have_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Card_Must_Have_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Card_Type__c) = &quot;Credit&quot;,
    ISNULL(Credit_Limit__c)
)</errorConditionFormula>
    <errorDisplayField>Available_Limit__c</errorDisplayField>
    <errorMessage>&quot;Credit cards must have a credit limit defined&quot;</errorMessage>
</ValidationRule>