force-app/main/default/objects/Card__c/validationRules/Expiry_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date_Must_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_Date__c &lt;= TODAY()</errorConditionFormula>
    <errorMessage>Expiry date must be in the future</errorMessage>
</ValidationRule>