force-app/main/default/objects/Card__c/validationRules/Valid_Card_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Card_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Card_Number__c)),
    OR(
        LEN(Card_Number__c) &lt; 13,
        LEN(Card_Number__c) &gt; 19
    )
)</errorConditionFormula>
    <errorMessage>Card number must be between 13 and 19 digits</errorMessage>
</ValidationRule>